--- a/Maquetacion_basica/reto3.css
+++ b/Maquetacion_basica/reto3.css
@@ -1,15 +1,36 @@
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-};
+    border-radius: 5px;
+}
+.main {
+    border: 5px solid rgb(166, 165, 165);
+    height: 80vh;
+    width: 30vw;
 
-.padre {
-    border: 10px solid red;
-    height: 10vh;
-    width: 10vw;
+    display: flex;
+    flex-direction: column;
+
 }
  .header{
-    border: 2px solid greenyellow
+    border: 4px solid rgb(157, 202, 157);
+    height: 10%;
 
  }
+ .nav{
+    border:4px solid rgb(216, 162, 181);
+    height: 7%;
+ }
+ .multiple{
+    height: 70%;
+ }
+  .multiderecha{
+    border: 4px solid rgb(121, 177, 230);
+    width: 65%;
+    height: 100%;
+  }
+   .article{
+    width: 10%;
+   }
