--- a/Maquetacion_basica/reto3.css
+++ b/Maquetacion_basica/reto3.css
@@ -9,28 +9,87 @@
     border: 5px solid rgb(166, 165, 165);
     height: 80vh;
     width: 30vw;
+    font-family: Arial, Helvetica, sans-serif;
 
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 
 }
  .header{
     border: 4px solid rgb(157, 202, 157);
-    height: 10%;
+    height: 15%;
+    width: 99%;
 
  }
  .nav{
     border:4px solid rgb(216, 162, 181);
-    height: 7%;
+    height: 10%;
+    width: 99%;
+
  }
  .multiple{
-    height: 70%;
+    height: 65%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    width: 99%;
  }
   .multiderecha{
     border: 4px solid rgb(121, 177, 230);
-    width: 65%;
+    width: 64%;
     height: 100%;
+    display:flex;
+    flex-direction: column;
+    
   }
-   .article{
+   .arriba{
+      height: 60%;
+   }
+    .article{
     width: 10%;
+    }
+
+   .abajo{
+      height: 40%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+
+   }
+      .section{
+         border: 4px solid rgb(217, 105, 217);
+         height: 40%;
+
+      }
+
+
+   .multiizquierda{
+      border: 4px solid rgb(232, 210, 163);
+      width: 35%;
+      display: flex;
+      flex-direction:column;
+      justify-content: space-around;
+      align-items: center;
+
+   }
+     .div{
+      
+      height: 8%;
+      width: 90%;
+
+     }
+     .aside{
+      border:4px solid rgb(71, 217, 197);
+      height: 45%;
+      width: 98%;
+     }
+
+   .footer{
+      border: 4px solid rgb(230, 244, 142);
+      height: 10%;
+      width: 99%;
+
    }
