--- a/Maquetacion_basica/Travel agency/travel.css
+++ b/Maquetacion_basica/Travel agency/travel.css
@@ -195,6 +195,12 @@ a {
     background-size: cover;
     height: 85vh;
 } 
+  .container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
  /*CARD CONTACT*/
 .singup {
     color:rgb(40, 119, 198);
@@ -209,7 +215,7 @@ a {
   
   .card2 {
     position: relative;
-    left: 200px;
+    right: 100px;
     top:50px;
     display: flex;
     justify-content: center;
