--- a/Maquetacion_basica/Instagram/instagram.css
+++ b/Maquetacion_basica/Instagram/instagram.css
@@ -151,12 +151,15 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap:2%
  }
  .a a{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 0.7rem;
-    text-align: center;
+   
     text-decoration: none;
     color: #7c7c7c;
 
@@ -165,7 +168,7 @@
  .a a:hover{
     text-decoration: underline;
  }
- .politica a{
+ /*.politica a{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 0.7rem;
     text-align: center;
@@ -178,7 +181,7 @@
     .a{
         flex-wrap: wrap;
     }
-}
+}*/
 @media screen and (max-width: 767px)
 {
     .content-left{
