--- a/Maquetacion_basica/Porfolio/porfolio.css
+++ b/Maquetacion_basica/Porfolio/porfolio.css
@@ -110,4 +110,82 @@
       color: var(--mycolorPink);
     }
 
+/*Main*/
+.aboutme{
+  border: 2px solid blue;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
 
+}
+ .info{
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+ }
+
+  .info h1{
+    font-size: 4rem;
+    color: var(--myColorGrey);
+  }
+  .info h1 span{
+    color: var(--mycolorPink);
+  }
+.aboutme img{
+  height: 70vh;
+  border: 7px solid rgb(200, 200, 200);
+  
+}
+/* BOTON DESCARGA */
+.btn {
+  font-size: 17px;
+  background: transparent;
+  border: none;
+  padding: 1em 1.5em;
+  color:var(--myColorGrey);
+  text-transform: uppercase;
+  position: relative;
+  transition: .5s ease;
+}
+
+.btn::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 2px;
+  width: 0;
+  background-color:var(--myColorBlue);
+  transition: .5s ease;
+}
+
+.btn:hover {
+  color: #1e1e2b;
+  transition-delay: .5s;
+}
+
+.btn:hover::before {
+  width: 100%;
+}
+
+.btn::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 0;
+  width: 100%;
+  background-color: var(--myColorBlue);
+  transition: .4s ease;
+  z-index: -1;
+}
+
+.btn:hover::after {
+  height: 100%;
+  transition-delay: 0.4s;
+  color: aliceblue;
+}
